# DevOps-IU-Course

.github/workflows/: ansible-deploy.yml  python-ci.yml
ansible/: .ansible-lint  .gitignore  ansible.cfg
ansible/docs/: LAB05.md  LAB06.md
ansible/group_vars/: all.yml
ansible/playbooks/: deploy.yml  deploy_all.yml  deploy_python.yml  deploy_rust.yml  provision.yml  site.yml
ansible/vars/: app_python.yml  app_rust.yml
app_python/: .dockerignore  Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt
app_python/docs/: LAB01.md  LAB02.md  LAB03.md
app_python/src/: metrics.py  statistics.py
app_python/src/routes/: health.py  metrics.py  root.py  visits.py
app_python/tests/: test_endpoints.py
app_rust/: .dockerignore  Cargo.toml  Dockerfile  README.md
app_rust/docs/: LAB01.md  LAB02.md  RUST.md
app_rust/src/: main.rs
k8s/: ARGOCD.md  CONFIGMAPS.md  HELM.md  README.md  SECRETS.md  deployment.yml  policy.hcl  service.yml
k8s/argocd/: application-dev.yaml  application-prod.yaml  application.yaml  applicationset.yaml
k8s/mychart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/mychart/files/: config.json
k8s/mychart/templates/: _helpers.tpl  configmap-env.yaml  (+5 more)
monitoring/: 1  docker-compose.yml  grafana_prometheus.json
monitoring/docs/: LAB07.md  LAB08.md
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
terraform/: .gitignore  main.tf  output.tf  variables.tf
terraform/docs/: LAB04.md
(+16 files in other folders)
